--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div><i class="fa fa-download"></i> <span data-lang-key="size">25MB</span></div>
     </div>
     <div class="download-btn">
-      <a href="Uploads/zrucaran.apk" download data-lang-key="download">Download App</a>
+      <a href="https://apk.e-droid.net/apk/app3325641-9xbohl.apk?v=8" download data-lang-key="download">Download App</a>
     </div>
     <div class="screenshot-slider">
       <div class="screenshot"><img src="upload/screenshot/ZTube.png" alt="Screenshot 1" /></div>
