--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Zrucaran</title>
+  <!-- Favicon for standard browsers -->
+<link rel="icon" type="image/png" sizes="16x16" href="/fv/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/fv/favicon-32x32.png">
+<link rel="shortcut icon" href="/fv/favicon.ico">
+
+<!-- Android Chrome icons -->
+<link rel="icon" type="image/png" sizes="192x192" href="/fv/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/fv/android-chrome-512x512.png">
+
+<!-- Apple Touch icon -->
+<link rel="apple-touch-icon" href="/fv/apple-touch-icon.png">
+
+<!-- Web app manifest -->
+<link rel="manifest" href="/fv/site.webmanifest">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
