--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Zrucaran</title>
+  <meta name="description" content="Zrucaran-ը ժամանակակից սոցիալական հավելված է՝ շփման, նոր ծանոթությունների և համայնքի ստեղծման համար։ Միացիր ու պահիր կապը քեզ համար կարևոր մարդկանց հետ։">
   <meta name="keywords" content="zrucaran, social app, social media platform, friends, chat, messaging app, group chat, connect people, discover new friends, post stories, comment, like, share, notifications, real-time communication, user profile, social feed, mobile community, online communication, video chat, voice messages, secure messaging, Armenian social network, Armenian app, Armenia community, социальное приложение, друзья, чат, общение, обмен сообщениями, найти друзей, создать профиль, комментарии, лайки, сторис, делиться моментами, видео чат, голосовые сообщения, социальная сеть, армянское приложение, армянская соцсеть, zrucaran приложение, զրուցարան, սոցիալական հավելված, ընկերներ, զրույց, ուղերձներ, հաղորդագրություններ, խմբակային չաթ, նոր ծանոթություններ, նկարներ, սթորի, մեկնաբանություններ, լայքեր, կիսվել պահերով, պրոֆիլ, ծանուցումներ, վիդեոզանգեր, ձայնային հաղորդագրություններ, հայկական հավելված, հայկական սոցիալական ցանց, հայ համայնք, կապ Հայաստանից դուրս, հայկական կապը աշխարհով մեկ">
   <!-- Favicon for standard browsers -->
 <link rel="icon" type="image/png" sizes="16x16" href="/fv/favicon-16x16.png">
